v10 fix safari text wrap bug

--- a/src/styles/_app.sass
+++ b/src/styles/_app.sass
@@ -2250,7 +2250,6 @@ blockquote
 .item-slider-product
 	width: 100%
 	height: 634px
-	
 	color: $text
 	cursor: pointer
 	&:hover
@@ -2259,7 +2258,6 @@ blockquote
 	&__inner
 		display: flex
 		height: 100%
-	&__img-wrap
 	&__play-wrap
 		flex-direction: column
 		justify-content: center
@@ -2279,6 +2277,7 @@ blockquote
 		padding: 16px 0
 		cursor: pointer
 	&__title
+		flex: 1 1 auto
 		font-size: 20px
 		margin-bottom: 0
 	&__arrow
